[project]
name = "channely"
version = "0.1.0"
description = ""
authors = [
    {name = "Tim O'Farrell",email = "tofarr@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black (>=25.1.0,<26.0.0)"
]

[tool.poetry]
packages = [{include = "channely", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
