[project]
name = "channely"
version = "0.1.0"
description = ""
authors = [
    {name = "Tim O'Farrell",email = "tofarr@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy (>=2.0.0,<3.0.0)"
]

[tool.poetry.group.dev.dependencies]
black = "~25.1"
pytest = "~7.2"
pytest-cov = "~4.0"
pytest-xdist = "~3.2"
pylint = "~3.0"

[tool.poetry]
packages = [{include = "channely"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
